<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/engineering"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="#212121"
        android:background="#f44336"
        android:onClick="ENGINEERING"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="538dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/hub"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508"
        app:srcCompat="@drawable/hub" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="334dp"
        android:layout_height="31dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="18dp"
        android:text="@string/welcome_to_explore_hub"
        android:textColor="#8BC34A"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>














